[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/scenes/Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/Racket.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/graphics/rede.png" type="Texture" id=3]
[ext_resource path="res://src/gameplay/Gameplay.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Sysmtext/Symtext.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/scenes/EnemyRacket.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scripts/PauseMode.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 11
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 11
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[sub_resource type="Environment" id=6]
background_mode = 4
glow_enabled = true
glow_bloom = 1.0
glow_blend_mode = 0
glow_bicubic_upscale = true

[node name="Gameplay" type="Node"]
script = ExtResource( 4 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LabelShowFPS" type="Label" parent="HUD"]
modulate = Color( 0.991211, 0.981531, 0, 1 )
anchor_left = 0.108333
anchor_right = 0.225
anchor_bottom = 0.1
margin_right = 3.8147e-06
custom_fonts/font = SubResource( 1 )
text = "FPS: 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Score1" type="Label" parent="HUD"]
anchor_left = 0.333333
anchor_right = 0.422222
anchor_bottom = 0.1
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Score2" type="Label" parent="HUD"]
anchor_left = 0.583333
anchor_right = 0.672222
anchor_bottom = 0.1
margin_right = 1.52588e-05
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="HUD"]
anchor_left = 0.738889
anchor_top = 0.0125
anchor_right = 0.963889
anchor_bottom = 0.0833333
custom_fonts/font = SubResource( 3 )
text = "(Q) FOR QUIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Rede" type="Sprite" parent="."]
position = Vector2( 180, 120 )
scale = Vector2( 1, 1.93548 )
texture = ExtResource( 3 )

[node name="Ball" parent="." instance=ExtResource( 1 )]

[node name="Racket" parent="." instance=ExtResource( 2 )]
modulate = Color( 0, 0.643137, 1, 1 )
position = Vector2( 20, 120 )

[node name="EnemyRacket" parent="." instance=ExtResource( 6 )]
modulate = Color( 0, 0.643137, 1, 1 )
position = Vector2( 340, 120 )

[node name="PauseMode" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 7 )

[node name="LabelPaused" type="Label" parent="PauseMode"]
visible = false
anchor_left = 0.108333
anchor_right = 0.891667
anchor_bottom = 0.391667
custom_fonts/font = SubResource( 4 )
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LabelWinner" type="Label" parent="."]
visible = false
anchor_left = 0.240278
anchor_right = 0.759722
anchor_bottom = 0.1
custom_fonts/font = SubResource( 5 )
text = "vencedor do jogo!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TimerMenu" type="Timer" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[connection signal="timeout" from="TimerMenu" to="." method="_on_TimerMenu_timeout"]
